--- a/style.css
+++ b/style.css
@@ -19,7 +19,7 @@ html::-webkit-scrollbar-track{
   padding: 100px;
   text-align: center;
 }
- 
+
 .hero img {
   border-radius: 50px;
   margin-bottom: 10px;
@@ -55,9 +55,10 @@ html::-webkit-scrollbar-track{
   }
 
   .hero h4 {
-    font-size: 20px;
+    font-size: 18px;
     float: right;
     margin-top: 35px;
+    padding-right: 20px;
   }
 }
 
